# litellm-proxy

./: .dockerignore  .gitignore  AUDIT_FINDINGS_SUPPLEMENT.md  AUDIT_VERIFICATION.md  CONTRIBUTING.md  Dockerfile  FIX_REPORT.md  FIX_REPORT_ROUND2.md  LICENSE  MODEL_SELECTION_IMPROVEMENT.md  PROJECT_OVERVIEW.md  README.md  README_CN.md  UI_UX_Improvement_Suggestions.md  admin_routes.py  audit_store.py  benchmark_perf.py  chat.py  config.example.json  config.example.jsonc  config_loader.py  config_manager.py  docker-compose.yml  docker-entrypoint.sh  format_adapters.py  history_store.py  model_discovery_queue.py  model_registry.py  observability.py  overview.md  parameter_compatibility.py  playground-check.yml  pricing_resolver.py  probe_coordinator.py  protocol_adapters.py  proxy_utils.py  pyproject.toml  request_dispatcher.py  request_routes.py  requirements.txt  (+13 more)
.backup-opt3/: app.js  observability.py  router.py  sse2json.py  styles.css
.catpaw/: preview.yml
artificial_analysis_api/: README.md  __init__.py  builtin_index.json  cache.py  fetcher.py  index.py  main.py  model_index.json  models.py  parser.py  router.py
conversion_core/: __init__.py  common.py  compatibility.py  engine.py  errors.py  model.py  session_store.py  streaming.py  validation.py
dashboard/: app.js  index.html  styles.css
dashboard_src/: REFACTOR_PLAN.md  extract_api.py  fix.js  fix3.js  fix4.js  fix_broken.py  fix_broken2.py  fix_doc_events.py  fix_dom.js  fix_dom2.js  fix_events.py  fix_guard.py  fix_syntax.py  fix_syntax2.py  fix_syntax3.py  package-lock.json  package.json  revert.py  update.py  update_api.py  vite.config.js
docs/: FEATURES.md  VPS_MIGRATION.md  benchmark-guide.md  bug-optimization-plan.md  development-roadmap.md  fix-plan-2026-06-25.md  fix-plan-2026-07-03.md  fix-plan-2026-07-08.md  format-routing-plan.md  optimization-strategy.md  playground-design.md  release-checkpoint.md  routing-circuit-breaker.md  ui-ux-optimization-plan.md  web-console-ui-plan.md
tests/: test_admin_api.py  test_agent_conversion_core.py  test_agent_conversion_roundtrip.py  test_agent_stream_chunking.py  test_anthropic_proxy.py  test_audit_store.py  test_auto_routing.py  test_chat_proxy.py  test_cli_and_runtime_lifecycle.py  test_client_identity.py  test_config_loader.py  test_config_manager.py  test_conversions.py  test_debug_log_redaction.py  test_diagnostic_logging.py  test_health_scores.py  (+27 more)
(+69 files in other folders)
