[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litellm-proxy"
version = "1.0.0"
description = "Format-aware LLM API proxy with 3-format conversion, smart routing, failover & web dashboard"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "XD06"},
]
keywords = ["llm", "proxy", "openai", "anthropic", "api-gateway", "failover"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "urllib3>=2.0,<3",
    "httpx>=0.27,<1",
    "beautifulsoup4>=4.12,<5",
    "PySocks>=1.7,<2",
    "fastapi>=0.115,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.scripts]
litellm-proxy = "sse2json:main"

[project.urls]
Homepage = "https://github.com/XD06/litellm-proxy"
Repository = "https://github.com/XD06/litellm-proxy"
Issues = "https://github.com/XD06/litellm-proxy/issues"
Documentation = "https://github.com/XD06/litellm-proxy/blob/main/PROJECT_OVERVIEW.md"

[tool.setuptools]
py-modules = [
    "sse2json",
    "router",
    "stream_adapters",
    "protocol_adapters",
    "format_adapters",
    "parameter_compatibility",
    "config_loader",
    "config_manager",
    "observability",
    "model_registry",
    "model_discovery_queue",
    "admin_routes",
    "upstream_client",
    "scheduler_policy",
    "history_store",
    "usage_accounting",
    "usage_statistics",
    "pricing_resolver",
    "probe_coordinator",
    "audit_store",
    "request_routes",
    "request_dispatcher",
    "proxy_utils",
    "routing_explain",
    "routing_trace",
    "responses",
    "chat",
]

[tool.setuptools.packages.find]
include = ["artificial_analysis_api*", "conversion_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
